# algoritmos_poblacion_expresiones

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.py  ejecuciones.sh  meson.build  meson.options  over_sampling.py
Resumenes iniciales/: resumen_PG.md
data_proccess_and_analisys/: analisis.R  over_sampling_BL-SMOTE.py  over_sampling_SMOTEN.py  over_sampling_regression.py
datos/: ele-1-names.txt  iris.csv
datos/pruebas/: ele-2-names.txt
diario/: README.md
doc/doxys/: Doxyfile
doc/html/: AlgoritmoGA__P_8hpp.html  AlgoritmoGA__P_8hpp__incl.map  AlgoritmoGA__P_8hpp_source.html  AlgoritmoPG_8hpp.html  AlgoritmoPG_8hpp__incl.map  AlgoritmoPG_8hpp_source.html  AlgoritmoPoblacion_8hpp.html  AlgoritmoPoblacion_8hpp__dep__incl.map  AlgoritmoPoblacion_8hpp__dep__incl.md5  AlgoritmoPoblacion_8hpp__incl.map  AlgoritmoPoblacion_8hpp__incl.md5  AlgoritmoPoblacion_8hpp_source.html  Expresion_8hpp.html  Expresion_8hpp__dep__incl.map  Expresion_8hpp__incl.map  Expresion__GAP_8hpp.html  Expresion__GAP_8hpp__dep__incl.map  Expresion__GAP_8hpp__incl.map  Nodo_8hpp.html  Nodo_8hpp__dep__incl.map  Nodo_8hpp__dep__incl.md5  Nodo_8hpp__incl.map  Nodo_8hpp__incl.md5  Nodo_8hpp_source.html  Parametros_8hpp.html  Parametros_8hpp__dep__incl.map  Parametros_8hpp__incl.map  Poblacion_8hpp.html  Poblacion_8hpp__dep__incl.map  Poblacion_8hpp__dep__incl.md5  Poblacion_8hpp__incl.map  Poblacion_8hpp__incl.md5  README_8md.html  Random_8hpp.html  Random_8hpp__dep__incl.map  Random_8hpp__incl.map  Random_8hpp_source.html  aux__pob__algs_8hpp.html  aux__pob__algs_8hpp__dep__incl.map  aux__pob__algs_8hpp__dep__incl.md5  (+69 more)
docs/: AlgoritmoGA__P_8hpp.html  AlgoritmoGA__P_8hpp__incl.map  AlgoritmoGA__P_8hpp__incl.md5  AlgoritmoGA__P_8hpp_source.html  AlgoritmoPG_8hpp.html  AlgoritmoPG_8hpp__incl.map  AlgoritmoPG_8hpp__incl.md5  AlgoritmoPG_8hpp_source.html  AlgoritmoPoblacion_8hpp.html  AlgoritmoPoblacion_8hpp__dep__incl.map  AlgoritmoPoblacion_8hpp__incl.map  AlgoritmoPoblacion_8hpp__incl.md5  AlgoritmoPoblacion_8hpp_source.html  Expresion_8hpp.html  Expresion_8hpp__dep__incl.map  Expresion_8hpp__dep__incl.md5  Expresion_8hpp__incl.map  Expresion_8hpp__incl.md5  Expresion_8hpp_source.html  Expresion__GAP_8hpp.html  Expresion__GAP_8hpp__dep__incl.map  Expresion__GAP_8hpp__dep__incl.md5  Expresion__GAP_8hpp__incl.map  Expresion__GAP_8hpp__incl.md5  Expresion__GAP_8hpp_source.html  Nodo_8hpp.html  Nodo_8hpp__dep__incl.map  Nodo_8hpp__incl.map  Nodo_8hpp__incl.md5  Nodo_8hpp_source.html  Parametros_8hpp.html  Parametros_8hpp__dep__incl.map  Parametros_8hpp__dep__incl.md5  Parametros_8hpp__incl.map  Parametros_8hpp__incl.md5  Parametros_8hpp_source.html  Poblacion_8hpp.html  Poblacion_8hpp__dep__incl.map  Poblacion_8hpp__incl.map  Poblacion_8hpp__incl.md5  (+109 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+48 more)
graficas/: comparaciones_algoritmos.gp  comparaciones_over.gp  elementos_fase.gp  valor_predecido_real.gp
include/: AlgoritmoGA_P.hpp  AlgoritmoGA_P.tpp  AlgoritmoPG.hpp  AlgoritmoPG.tpp  AlgoritmoPoblacion.hpp  AlgoritmoPoblacion.tpp  Expresion.hpp  Expresion_GAP.hpp  GA-P.hpp  GA_P.hpp  GA_P.tpp  Nodo.hpp  PG.hpp  PG.tpp  PG_ALG.hpp  PG_ALG.tpp  Poblacion.hpp  Poblacion.tpp  Random.hpp  aux_gap.hpp  aux_pg_algs.hpp  expresion.hpp  expresion_gap.hpp  nodo.hpp  poblacion.hpp  poblacion.tpp  preprocesado.hpp  preprocesado.tpp  random.hpp
python_data_proccess/: analisis.R  over_sampling_classification.py  over_sampling_regression.py  simplificar_formulas.py
src/: AlgoritmoGA_P.cpp  AlgoritmoPG.cpp  Expresion.cpp  Expresion_GAP.cpp  GA_P.cpp  Nodo.cpp  PG_ALG.cpp  Random.cpp  aux_gap.cpp  aux_pg_algs.cpp  expresion.cpp  expresion_gap.cpp  main.cpp  main_conteo.cpp  main_evaluar_expresion_archivo.cpp  main_preprocesar.cpp  main_pruebas.cpp  main_suma_caracteristicas.cpp  main_test.cpp  nodo.cpp  poblacion.cpp  preprocesado.cpp  random.cpp
tests/: expresion_prueba.txt  tests_expresion.hpp  tests_expresion_gap.hpp  tests_nodo.hpp  tests_regla_clasificacion.hpp
(+61 files in other folders)
